# TemperatureMonitoring

./: README.md
OpenWindows/: .editorconfig  OpenWindows.sln
OpenWindows/OpenWindows/: .gitignore  OpenWindows.sln  Settings.XamlStyler
OpenWindows/OpenWindows/OpenWindows/: App.axaml  App.axaml.cs  OpenWindows.csproj  ViewLocator.cs
OpenWindows/OpenWindows/OpenWindows.Android/: MainActivity.cs  OpenWindows.Android.csproj
OpenWindows/OpenWindows/OpenWindows.Android/Properties/: AndroidManifest.xml
OpenWindows/OpenWindows/OpenWindows.Browser/: OpenWindows.Browser.csproj  Program.cs
OpenWindows/OpenWindows/OpenWindows.Browser/AppBundle/: index.html
OpenWindows/OpenWindows/OpenWindows.Browser/Properties/: launchSettings.json
OpenWindows/OpenWindows/OpenWindows.Desktop/: OpenWindows.Desktop.csproj  Program.cs  app.manifest
OpenWindows/OpenWindows/OpenWindows.iOS/: AppDelegate.cs  Info.plist  Main.cs  OpenWindows.iOS.csproj
OpenWindows/OpenWindows/OpenWindows.iOS/Resources/: LaunchScreen.xib
OpenWindows/OpenWindows/OpenWindows/Converters/: FloatToStringConverter.cs
OpenWindows/OpenWindows/OpenWindows/Models/: SettingType.cs  Settings.cs
OpenWindows/OpenWindows/OpenWindows/ViewModels/: MainViewModel.cs  SettingsViewModel.cs  ViewModelBase.cs  WelcomeViewModel.cs
TemperatureMonitor/: .gitignore  Cargo.toml  Settings.toml
TemperatureMonitor/src/: conditions_comparer.rs  fake_weather_provider.rs  home_info_provider.rs  main.rs  notification_manager.rs  open_weather_models.rs  open_weather_provider.rs  settings.rs  weather_provider.rs
(+8 files in other folders)
