[package]
name = "temperature_monitor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.29.1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0.176", features = ["derive"] }
serde_json = "1.0.104"
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-appender = "0.2"
config = { version = "0.13", features = ["toml"] }
lazy_static = "1.4"
parse_duration = "2.1.1"
async-trait = "0.1.72"
rand = "0.8"
notify-rust = "4.8.0"
directories = "5.0.1"
